=head1 NAME

aa_monitor changelog

=head1 VERSIONS

=head2 1.1.3

=over

=item * module L<B<IOIPTV>|P9::AA::Check::IOIPTV>: new parameter B<min_byteps>, refactoring

=back

=head2 1.1.2

=over

=item * new module L<B<HTTPSmoothStreaming>|P9::AA::Check::HTTPSmoothStreaming>

=item * new module L<B<HTTPLiveStreaming>|P9::AA::Check::HTTPLiveStreaming>

=item * module L<B<DNS>|P9::AA::Check::DNS> and all it's derived modules now support new parameters:
B<debug_dns>, B<srcaddr>, B<srcport>.

=item * modules L<B<DNSZone>|P9::AA::Check::DNSZone> and L<B<DNSZoneConsistency>|P9::AA::Check::DNSZoneConsistency> now
accept comma separated list of zone names in B<zone> parameter. 

=item * module L<B<JSON>|P9::AA::Check::JSON> now supports json structure checks using regular expressions with
parameters B<content_pattern> and B<content_pattern_match>

=item * module L<B<Memory>|P9::AA::Check::Memory> fixed completely b0rken memory usage calculation

=item * module L<B<RTSP>|P9::AA::Check::RTSP> implemented connection caching, complete RTSP request is now
sent using single print() call.

=item * module L<B<XML>|P9::AA::Check::XML> now supports XML structure checks using regular expressions with
parameters B<content_pattern> and B<content_pattern_match>

=item * Added Win32, OS/2 support to L<P9::AA::Config>

=back

=head2 1.1.1

=over

=item * new module L<B<ArecaRAID>|P9:AA::Check::ArecaRAID> - L<Areca|http://www.areca.com.tw> hardware RAID checking module

=back

=head2 1.1.0

=over

=item * feature: command line/nagios/icinga client can now read check parameters in JSON format from file or stdin

=item * feature: command line client can now display readme, credits and changelog documentation

=item * new module L<B<ApacheSolr>|P9::AA::Check::ApacheSolr> - checks your L<Apache Solr|http://lucene.apache.org/solr> server :)

=item * new module L<B<HAProxy>|P9::AA::Check::HAProxy> - check your L<HAProxy|http://haproxy.wt1.eu> load balancer.
